--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,7 @@
         </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/util.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
