--- a/app/index.html
+++ b/app/index.html
@@ -24,9 +24,12 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
-        <section class="question-container">
-        </section>
+        <div class="fillgaps">
+            <section class="question-container">
+            </section>
+            <button class="giveup">Give up</button>
+            <button class="confirm">Confirm</button>
+        </div>
 
 
         <!-- build:js scripts/vendor.js -->
