Add dialog on confirm

--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,21 @@
         <div class="fillgaps">
             <section class="question-container">
             </section>
-            <button class="giveup">Give up</button>
-            <button class="confirm">Confirm</button>
+            <button class="btn btn-cancel giveup">Give up</button>
+            <button class="btn btn-confirm  confirm">Confirm</button>
+
         </div>
+            <div class="message-box">
+                <div class="content">Confirma o envio das respostas Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.?</div>
+                <button class="btn btn-cancel act-cancel">Cancel</button>
+                <button class="btn btn-confirm act-ok">OK</button>
+            </div>
+
 
 
         <!-- build:js scripts/vendor.js -->
