git add possibility multiple containers

--- a/app/multi.html
+++ b/app/multi.html
@@ -25,12 +25,19 @@
         <![endif]-->
 
         <div class="fillgaps">
-            <section class="question-container">
+            <section class="questas">
             </section>
             <button class="btn btn-cancel giveup">Give up</button>
             <button class="btn btn-confirm  confirm">Confirm</button>
 
         </div>
+<div class="fillgaps two">
+    <section class="questas-slide2">
+    </section>
+    <button class="btn btn-cancel giveup">Give up</button>
+    <button class="btn btn-confirm  confirm">Confirm</button>
+
+</div>
             <div class="message-box">
                 <div class="content"></div>
                 <button class="btn btn-cancel act-cancel">Cancel</button>
@@ -60,7 +67,6 @@
         <script src="scripts/gaps.js"></script>
         <script src="scripts/util.js"></script>
         <script src="scripts/questions.js"></script>
-        <script src="scripts/main.js"></script>
 
         <!-- endbuild -->
 </body>
